[package]
name = "wagyu-zcash-parameters-6"
version = "0.1.0"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for loading Zcash Sapling parameters"
homepage = "https://github.com/AleoHQ/wagyu-zcash-parameters"
repository = "https://github.com/AleoHQ/wagyu-zcash-parameters"
categories = ["cryptography", "caching"]
keywords = ["blockchain", "crypto", "cryptocurrency", "sapling", "zcash"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
